Form Regex added and Ins_Premium CSV handle
